--- a/package.json
+++ b/package.json
@@ -27,20 +27,19 @@
   },
   "dependencies": {
     "co-body": "^1.0.0",
+    "debug": "^2.1.0",
     "koa": "^0.14.0",
+    "koa-compress": "^1.0.8",
     "koa-hbs": "^0.6.0",
     "koa-logger": "^1.2.2",
+    "koa-response-time": "^1.0.2",
     "koa-route": "^2.4.0",
     "koa-static": "^1.4.8"
   },
-  "devDependencies": {
-    "debug": "^2.1.0"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">= 0.11.14",
     "iojs": ">= 1"
   },
-  "keywords": [
-
-  ]
+  "keywords": []
 }
