setup the mocha, supertest for first successfully test

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   ],
   "main": "./server/index",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require should --reporter spec --bail --harmony server/test/*.spec.js"
   },
   "dependencies": {
     "co-body": "^1.0.0",
@@ -33,10 +34,16 @@
     "koa-hbs": "^0.6.0",
     "koa-logger": "^1.2.2",
     "koa-response-time": "^1.0.2",
-    "koa-route": "^2.4.0",
+    "koa-router": "^3.8.0",
     "koa-static": "^1.4.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "co-mocha": "^1.1.0",
+    "co-supertest": "0.0.7",
+    "mocha": "^2.1.0",
+    "should": "^4.6.0",
+    "supertest": "^0.15.0"
+  },
   "engines": {
     "node": ">= 0.11.14",
     "iojs": ">= 1"
