add gulp task for jshint and jscs, fix all the errors and warning

--- a/.jshintrc
+++ b/.jshintrc
@@ -40,6 +40,8 @@
   "maxlen": 100,
   // suppresses warnings about comma-first coding style
   "laxcomma": true,
+  // newly discovered
+  "noyield": true,
   "predef": [
     "console",
     // mocha test framework globals
