--- a/package.json
+++ b/package.json
@@ -40,6 +40,11 @@
   "devDependencies": {
     "co-mocha": "^1.1.0",
     "co-supertest": "0.0.7",
+    "gulp": "^3.8.10",
+    "gulp-jscs": "^1.4.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-load-plugins": "^0.8.0",
+    "jshint-stylish": "^1.0.0",
     "mocha": "^2.1.0",
     "should": "^4.6.0",
     "supertest": "^0.15.0"
