--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "./server/index",
   "scripts": {
     "start": "node server",
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require should --reporter spec --bail --harmony server/test/*.spec.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --require should --reporter spec --bail --harmony server/test/**/*.spec.js"
   },
   "dependencies": {
     "co-body": "^1.0.0",
@@ -38,6 +38,7 @@
     "koa-static": "^1.4.8"
   },
   "devDependencies": {
+    "co": "^4.1.0",
     "co-mocha": "^1.1.0",
     "co-supertest": "0.0.7",
     "gulp": "^3.8.10",
